# weekend-activity-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  activities.py  cli.py  config.py  docker-compose.yml  entrypoint.sh  proposal_utils.py  pyproject.toml  secrets_store.py  slack-app-manifest.json  slack_bot.py  start.py  tool_impls.py  tools.py  worker.py
.github/workflows/: deploy.yml
agent_harness/: __init__.py  dynamic_executor.py  loop.py  tooldef.py
workflows/: __init__.py  compile_report.py  conversation.py  research.py  slack_interaction.py  tool_proposal.py  tool_registry.py  weekly.py
