[project]
name = "weekend-activity-agent"
version = "0.1.0"
description = "AI agent that researches weekend activities and sends weekly recommendations"
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.7.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.33.0",
    "slack-bolt>=1.20.0",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
